--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -18,3 +18,14 @@
     </tr>
   }
 </table>
+
+@code {
+  [Inject]
+  public IBugService BugService { get; set; }
+  public List<Bug> Bugs { get; set; }
+
+  protected override void OnInitialized()
+  {
+    Bugs = BugService.GetBugs().OrderBy(x => x.Priority).ToList();
+  }
+}
